syntax = "proto3";

package sol.transactions.v1;

import 'sf/solana/type/v1/type.proto';

message Transactions {
  repeated .sf.solana.type.v1.ConfirmedTransaction transactions = 1;
  uint64 block_height = 2;
  int64 block_timestamp = 3;
}
